--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-native-router-flux": "^0.3.2",
     "react-native-tabs": "^0.0.5",
     "minutes-seconds-milliseconds": "^1.0.3",
-    "react-native": "^0.13.2",
-    "react-native-button": "^1.2.1"
+    "lodash": "^3.10.1"
   }
 }
