--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react-native": "^0.13.2",
+    "reflux": "^0.2.7",
+    "react" : "^0.12.2",
     "react-native-button": "^1.2.1",
     "react-native-navbar": "^0.8.0",
     "react-native-router-flux": "^0.3.2",
